--- a/photogallery.html
+++ b/photogallery.html
@@ -32,12 +32,148 @@
                 <h1>Photo Gallery</h1>
                 <div class="gallery-container">
                     <div class="gallery-item">
-                        <img src="path_to_your_image.jpg" alt="Description of Image 1">
+                        <img src="images/2023 Advocates running orientaiton.jpg" 
+                        alt="2023 Advocates running orientaiton">
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="images/Advocates During the Production 2.jpg" 
+                        alt="Advocates During the Production 2">
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="images/Advocates during the Production.jpg" 
+                        alt="Advocates during the Production">
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="images/Advocates' selfie before production.jpg" 
+                        alt="Advocates' selfie before production">
+                    </div>
+                    
+                    <div class="gallery-item">
+                        <img src="images/Advos at Karaoke BSE.jpg" 
+                        alt="Advos at Karaoke BSE">
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="images/Advos being silly in front of main hall.jpg" 
+                        alt="AAdvos being silly in front of main hall">
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="images/Advos huddled together under banner in rain.jpg" 
+                        alt="Advos huddled together under banner in rain">
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="images/Advos in front of bear recruiting.jpg" 
+                        alt="Advos in front of bear recruiting">
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="images/Advos in Orange posing before orientation.jpg" 
+                        alt="Advos in Orange posing before orientation">
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="images/Advos posing in front of bear.jpg" 
+                        alt="Advos posing in front of bear">
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="images/Advos posing with new students under ask an advo tent.jpg" 
+                        alt="Advos posing with new students under ask an advo tent">
+                    </div>
+                    
+                    <div class="gallery-item">
+                        <img src="images/Advos under tent in front of bear posing for picture.jpg" 
+                        alt="Advos under tent in front of bear posing for picture">
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="images/Advos with Monte posing with Join the Advocates sign.jpg" 
+                        alt="Advos with Monte posing with Join the Advocates sign">
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="images/Advos working check in inside UC.jpg" 
+                        alt="Advos working check in inside UC">
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="images/Aliya getting wet in the rain.jpg" 
+                        alt="Aliya getting wet in the rain">
+                    </div>
+
+                    <div class="gallery-item">
+                            <img src="images/Ask an Advo pins in front of bear.jpg" 
+                            alt="AAsk an Advo pins in front of bear">
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="images/Devin Selfie with Advocates during Big Sky Experience.jpg" 
+                        alt="Devin Selfie with Advocates during Big Sky Experience">
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="images/Grey Polos Edited.png" 
+                        alt="Advocates posing in grey polos">
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="images/Group Photo Orange Polos.jpg" 
+                        alt="Advocates posing in orange polos">
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="images/Kelsie and Molly jumping in front of main hall.jpg" 
+                        alt="Kelsie and Molly jumping in front of main hall">
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="images/Late Check in Advos at the table.jpg" 
+                        alt="Late Check in Advos at the table">
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="images/Many Advos on Oval with signs.jpg" 
+                        alt="Many Advos on Oval with signs">
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="images/Marian and Julia in the Rain.jpg" 
+                        alt="Marian and Julia in the Rain">
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="images/Molly and Madeline on golf cart.jpg" 
+                        alt="Molly and Madeline on golf cart">
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="images/Orientation Group outside UC.jpg" 
+                        alt="Orientation Group outside UC">
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="images/Senior Advocates hugging in front of Big Sky Experience sign.jpg" 
+                        alt="Senior Advocates hugging in front of Big Sky Experience sign">
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="images/Serious Advocates 2023 Big Sky Experience.jpg" 
+                        alt="Advocates 2023 Big Sky Experience">
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="images/Silly Advocates 2023 Big Sky Experience.jpg" 
+                        alt="Silly Advocates 2023 Big Sky Experience">
                     </div>
                     <div class="gallery-item">
-                        <img src="path_to_your_image.jpg" alt="Description of Image 2">
+                        <img src="images/Wyatt carrying fridge.jpg" 
+                        alt="Wyatt carrying fridge">
                     </div>
-                    <!-- Add more gallery items as needed -->
                 </div>
             </div>
         </div>
