--- a/photogallery.html
+++ b/photogallery.html
@@ -28,8 +28,10 @@
 
     <main>
         <div class="section photo-gallery" id="PhotoGallery">
-            <div class="container">
-                <h1>Photo Gallery</h1>
+            <div class="section title" id="Title">
+                <div class="container">
+                    <h1>Photo Gallery</h1>
+                    
                 <div class="gallery-container">
                     <div class="gallery-item">
                         <img src="images/2023 Advocates running orientaiton.jpg" 
