--- a/index.html
+++ b/index.html
@@ -81,15 +81,20 @@
     </main>
 
     <footer class="horizontal-footer">
-        <div class="container">
-          <p>Follow me:</p> 
-          <a href="https://www.instagram.com/um_advocates/" target="_blank">
-              <img src="https://th.bing.com/th/id/R.330becd1786bd3d7958390ab98fdfef5?rik=Wiz4%2f0vJPdjcQg&riu=http%3a%2f%2fwww.pngall.com%2fwp-content%2fuploads%2f5%2fInstagram-Logo.png&ehk=D5ANNPTo%2fjLAW0UR1u9rms69i4BiAZ9%2fUunNikLa96Y%3d&risl=&pid=ImgRaw&r=0" alt="Instagram Logo" style="width:40px;">
-          </a> 
-          <a href="https://www.umt.edu/advocates/meet-the-advocates.php" target="_blank">
-            <img src="https://th.bing.com/th/id/OIP.EYiN3RBN4gMMCqK7d_fn4wHaEV?rs=1&pid=ImgDetMain" alt="Meet the Advocates Logo" style="width:40px;">
-          </a>  
+        <div class="footer-content">
+            <div class="social-media">
+                <a href="https://www.instagram.com/um_advocates/" target="_blank">
+                    <img src="images/Instagramlogoproject3.png" alt="Instagram Logo" class="social-icon">
+                </a> 
+                <a href="https://www.umt.edu/advocates/meet-the-advocates.php" target="_blank">
+                    <img src="https://th.bing.com/th/id/OIP.EYiN3RBN4gMMCqK7d_fn4wHaEV?rs=1&pid=ImgDetMain" alt="Meet the Advocates Logo" class="social-icon">
+                </a>
+            </div>
+            <div class="contact-info">
+                <p>Contact us at: <a href="mailto:info@umadvocates.com">info@umadvocates.com</a></p>
+            </div>
         </div>
     </footer>
+    
 </body>
 </html>
