--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
                 <img src="https://th.bing.com/th/id/OIP.EYiN3RBN4gMMCqK7d_fn4wHaEV?rs=1&pid=ImgDetMain" alt="UM Advocates Logo" class="logo">
             </a>
             <nav class="horizontal-nav">
-                <a href="apply.html">Apply Now</a>
+                <div class="dropdown">
+                    <button class="dropbtn">Apply Now</button>
+                    <div class="dropdown-content">
+                        <a href="apply.html">What's it like?</a>
+                        <a href="form.html">Basic Information Form</a>
+                    </div>
+                </div>
                 <div class="dropdown">
                     <button class="dropbtn">About</button>
                     <div class="dropdown-content">
@@ -33,7 +39,7 @@
                 <div class="image-container">
                     <img src="https://www.umt.edu/advocates/images/2023-advo-recruitment" alt="2023 Advocate Recruitment with multiple Advocates sitting, smiling at table" title="2023 Advo-Recruitment" class="image"/>
                 </div>
-                <p class="quote-text">The UM Advocates are an ASUM student group dedicated to the promotion
+                <p style="font-size: 20px;"quote-text>The UM Advocates are an ASUM student group dedicated to the promotion
                     of the University of Montana.  We do this by serving as all-around campus ambassadors,
                     student peer mentors, Big Sky Experience leaders, and by embodying the Griz spirit in our
                     everyday lives.  We are a group of diverse students who represent a wide breadth of academic
@@ -46,7 +52,7 @@
 
         <div class="section title" id="Mission Statement">
             <div class="container">
-                <h1 style="text-align: left; margin: 50px">Mission Statement:</h1>
+                <h1 style=" font-size: 30px;text-align: left; margin: 50px">Mission Statement:</h1>
                 <p  style="text-align: left; margin: 50px;"class="quote-text">We create and represent community through acts of service, while 
                     embodying acceptance, living purposefully, and fostering growth - in order to uphold 
                     the traditions and heritage of the University of Montana.
@@ -57,7 +63,7 @@
 
         <div class="section title" id="Goals">
             <div class="container">
-                <h1>Goals:</h1>
+                <h1 style="font-size: 30px;">Goals:</h1>
                 <ul class="goal-list quote-text">
                     <li>To provide leadership opportunities for the personal development of members</li>
                     <li>To assist the Office of Undergraduate Admissions in the recruitment effort with activities both on and off campus</li>
@@ -86,12 +92,15 @@
                 <a href="https://www.instagram.com/um_advocates/" target="_blank">
                     <img src="images/Instagramlogoproject3.png" alt="Instagram Logo" class="social-icon">
                 </a> 
-                <a href="https://www.umt.edu/advocates/meet-the-advocates.php" target="_blank">
-                    <img src="https://th.bing.com/th/id/OIP.EYiN3RBN4gMMCqK7d_fn4wHaEV?rs=1&pid=ImgDetMain" alt="Meet the Advocates Logo" class="social-icon">
+                <a href="https://www.facebook.com/UMAdvocates" target="_blank">
+                    <img src="images/facebooklogoproject3.png" alt="Meet the Advocates Logo" class="social-icon">
+                </a>
+                <a href="https://www.tiktok.com/@umadvocates" target="_blank">
+                    <img src="images/titktoklogoproject3.png" alt="Meet the Advocates Logo" class="social-icon">
                 </a>
             </div>
             <div class="contact-info">
-                <p>Contact us at: <a href="mailto:info@umadvocates.com">info@umadvocates.com</a></p>
+                <p>Email us at: <a href="Advocates@mso.umt.edu">Advocates@mso.umt.edu</a></p>
             </div>
         </div>
     </footer>
