--- a/contact.html
+++ b/contact.html
@@ -59,6 +59,14 @@
                     </div>
                     
                     <hr class="form-divider">
+
+                    <div class="form-group">
+                        <label for="comments">Comments:</label>
+                        <textarea id="comments" name="comments" rows="5" placeholder="Enter your comments here..."></textarea>
+                    </div>
+
+                    <hr class="form-divider">
+
                     
                     <div class="form-group">
                         <label>Would you like to receive our newsletter?</label>
