--- a/apply.html
+++ b/apply.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project 3</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -14,7 +17,7 @@
             </a>
             <nav class="horizontal-nav">
                 <div class="dropdown">
-                    <button class="dropbtn">Apply Now</button>
+                    <button class="dropbtn">Apply Now!</button>
                     <div class="dropdown-content">
                         <a href="apply.html">What's it like?</a>
                         <a href="form.html">Basic Information Form</a>
@@ -33,6 +36,7 @@
     </header>
 
     <main>
+        
         <div class="section title" id="Title">
             <div class="container">
                 <h1>Apply to Become an Advocate Today!</h1>
@@ -103,7 +107,7 @@
                 </a>
             </div>
             <div class="contact-info">
-                <p>Email us at: <a href="Advocates@mso.umt.edu">Advocates@mso.umt.edu</a></p>
+                <p>Email us at: <a href="mailto:advocates@mso.umt.edu">Advocates@mso.umt.edu</a></p>
             </div>
         </div>
     </footer>
