--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project 3</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <div class="header-content">
@@ -14,7 +18,7 @@
             </a>
             <nav class="horizontal-nav">
                 <div class="dropdown">
-                    <button class="dropbtn">Apply Now</button>
+                    <button class="dropbtn">Apply Now!</button>
                     <div class="dropdown-content">
                         <a href="apply.html">What's it like?</a>
                         <a href="form.html">Basic Information Form</a>
@@ -34,8 +38,10 @@
 
     <main>
         <div class="section title" id="Title">
+        <h1 style="font-size: 50pt;">University of Montana Advocates</h1>
+        </div>
+        <div class="section title" id="Title">
             <div class="container">
-                <h1>University of Montana Advocates</h1>
                 <div class="image-container">
                     <img src="https://www.umt.edu/advocates/images/2023-advo-recruitment" alt="2023 Advocate Recruitment with multiple Advocates sitting, smiling at table" title="2023 Advo-Recruitment" class="image"/>
                 </div>
@@ -100,7 +106,7 @@
                 </a>
             </div>
             <div class="contact-info">
-                <p>Email us at: <a href="Advocates@mso.umt.edu">Advocates@mso.umt.edu</a></p>
+                <p>Email us at: <a href="mailto:advocates@mso.umt.edu">Advocates@mso.umt.edu</a></p>
             </div>
         </div>
     </footer>
